# lattice

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lattice.config.example.toml
.github/workflows/: ci.yml
app/: package-lock.json  package.json  release.sh
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/lib/: api.ts  stores.test.ts  stores.ts  tree.test.ts  tree.ts
app/src/lib/components/: Editor.svelte  FileTree.svelte  LinksPanel.svelte  ListPanel.svelte  NoteView.svelte  QueryViews.svelte  Ribbon.svelte  SearchPanel.svelte  Sidebar.svelte  Tabs.svelte  Welcome.svelte
app/src/routes/: +layout.svelte  +page.svelte
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bundle.rs  config.rs  control.rs  edit.rs  index.rs  lib.rs  links.rs  model.rs  parse.rs  query.rs  render.rs  resolve.rs  tree.rs  walk.rs  watch.rs  wikilink.rs  write.rs
crates/core/tests/: fixture_vault.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
fixtures/vault/: README.md  orphan.md  secret.md
fixtures/vault/docs/: README.md  api.md  guide.md
