# Standalone workspace: the Tauri app builds independently of the core
# crates/ workspace so `cargo` in the root stays lean (core/mcp/cli only).
[workspace]

[package]
name = "lattice-app"
version = "0.3.0"
description = "Lattice desktop app"
authors = ["Anthony Rasch"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lattice-core = { path = "../../crates/core" }

