[package]
name = "lattice-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lattice engine: parse, index, query, and edit a markdown vault."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
