[package]
name = "lattice-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lattice engine: parse, index, query, and edit a markdown vault."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
ignore = "0.4"
pulldown-cmark = { version = "0.11", default-features = false }
regex = "1"
once_cell = "1"
blake3 = "1"
notify = "6"
tiktoken-rs = "0.6"
toml = "0.8"
comrak = "0.29"
ammonia = "4"

[dev-dependencies]
tempfile = "3"
insta = "1"
