[package]
name = "lattice-mcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lattice MCP server: expose the vault graph as Model Context Protocol tools."

[[bin]]
name = "lattice-mcp"
path = "src/main.rs"

[dependencies]
lattice-core.workspace = true
anyhow.workspace = true
