[package]
name = "lattice-mcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lattice MCP server: expose the vault graph as Model Context Protocol tools."

[[bin]]
name = "lattice-mcp"
path = "src/main.rs"

[dependencies]
lattice-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
